# leann-rs

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs
src/: config.rs  http.rs  main.rs
src/backend/: compat.rs  diskann.rs  hnsw.rs  mod.rs  traits.rs
src/chunker/: ast.rs  mod.rs  simple.rs
src/cli/: ask.rs  build.rs  config_cmd.rs  list.rs  mcp.rs  mod.rs  prune.rs  react.rs  remove.rs  search.rs  serve.rs  update.rs
src/embedding/: candle.rs  gemini.rs  mod.rs  models.rs  ollama.rs  openai.rs  traits.rs  truncate.rs
src/index/: bm25.rs  builder.rs  embeddings.rs  filter.rs  locate.rs  meta.rs  mod.rs  passages.rs  query.rs  recompute.rs  searcher.rs
src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs  simulated.rs
tests/: integration_test.rs
